# fexware

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  init.sh
include/: actions.h  filesystem.h  layer.h  operation.h  parser.h  queue_message.h  tokenizer.h
src/: actions.cc  diskio.c  filesystem.cc  layer.cc  main.cc  parser.cc  tokenizer.cc  tud_usb.c
